tests/snapshots/end2end__down twice.snap
---
source: tests/end2end.rs
expression: tsiv.last_screen()
---
captured piece:
x01234567890123456789012345678901234567890123456789012345678901234567890123456789x
0                                                                                |
1                                                                                |
2                                                                                |
3                                                                                |
4                                                                                |
5                                                                                |
6────────────────────────────────────────────────────────────────────────────────|
7                                                                                |
8                                                                                |
9                                                                                |
0                                                                                |
1                                                                                |
2────────────────────────────────────────────────────────────────────────────────|
3_                                                                               |
4                                                                                |
5                                                                                |
6                                                                                |
7                                                                                |
8                                                                                |
9                                                                                |
0                                                                                |
1                                                                                |
2                                                                                |
3                                                                                |
x--------------------------------------------------------------------------------x

