tests/snapshots/end2end__end2end_custom_split_ratio_horizontal.snap
---
source: tests/end2end.rs
expression: tsiv.last_screen()

---
captured piece:
x01234567890123456789012345678901234567890123456789012345678901234567890123456789x
0A very very long text to demonstrate the split that happens     │_              |
1later on in this example.                                       │               |
2                                                                │               |
3                                                                │               |
4                                                                │               |
5                                                                │               |
6                                                                │               |
7                                                                │               |
8                                                                │               |
9                                                                │               |
0                                                                │               |
1                                                                │               |
2                                                                │               |
3                                                                │               |
4                                                                │               |
5                                                                │               |
6                                                                │               |
7                                                                │               |
8                                                                │               |
9                                                                │               |
0                                                                │               |
1                                                                │               |
2                                                                │               |
3                                                                │               |
x--------------------------------------------------------------------------------x

