tests/snapshots/end2end__end2end_custom_split_ratio_overshoot_correction.snap
---
source: tests/end2end.rs
expression: tsiv.last_screen()

---
captured piece:
x01234567890123456789012345678901234567890123456789012345678901234567890123456789x
0A very very long text to demonstrate the│_                                      |
1split that happens later on in this     │                                       |
2example.                                │                                       |
3                                        │                                       |
4                                        │                                       |
5                                        │                                       |
6                                        │                                       |
7                                        │                                       |
8                                        │                                       |
9                                        │                                       |
0                                        │                                       |
1                                        │                                       |
2                                        │                                       |
3                                        │                                       |
4                                        │                                       |
5                                        │                                       |
6                                        │                                       |
7                                        │                                       |
8                                        │                                       |
9                                        │                                       |
0                                        │                                       |
1                                        │                                       |
2                                        │                                       |
3                                        │                                       |
x--------------------------------------------------------------------------------x

